@@ -89,7 +89,7 @@ public class CoyoteInputStream
                         new PrivilegedExceptionAction<Integer>(){
 
                             public Integer run() throws IOException{
-                                Integer integer = new Integer(ib.readByte());
+                                Integer integer = Integer.valueOf(ib.readByte());
                                 return integer;
                             }
 
@@ -118,7 +118,7 @@ public class CoyoteInputStream
                         new PrivilegedExceptionAction<Integer>(){
 
                             public Integer run() throws IOException{
-                                Integer integer = new Integer(ib.available());
+                                Integer integer = Integer.valueOf(ib.available());
                                 return integer;
                             }
 
@@ -148,7 +148,7 @@ public class CoyoteInputStream
 
                             public Integer run() throws IOException{
                                 Integer integer = 
-                                    new Integer(ib.read(b, 0, b.length));
+                                    Integer.valueOf(ib.read(b, 0, b.length));
                                 return integer;
                             }
 
@@ -180,7 +180,7 @@ public class CoyoteInputStream
 
                             public Integer run() throws IOException{
                                 Integer integer = 
-                                    new Integer(ib.read(b, off, len));
+                                    Integer.valueOf(ib.read(b, off, len));
                                 return integer;
                             }
 
